# devme.md

./: .gitignore  MANUAL.md  README.md  ash  config.example.json  devme  pyproject.toml  serve.html  wizard.html
hooks/: ash-init  ash-open  devme-init  devme-open  parse-ai-session  parse-ghostty-session  session-close  tmux-start-log  update-session-docs
src/devme/: cli.py
